test_cases/positive/forward_referenced_function.snek
export DEFAULT = Foo();

def Foo() {
    return 10;
}
