test_cases/negative/join_wrong_type.snek
export DEFAULT = Join(1, 2);
